# SERIES-DE-TIEMPO-2025-II

./: README.md  app.py  gunicorn.conf.py  pyproject.toml  replit.md  wsgi.py
descomposicion/: requirements.txt  time_series_analysis.tsx
descomposicion/static/css/: dashboard.css
descomposicion/static/js/: dashboard.js  decomposition.js
descomposicion/templates/: dashboard.html  modelo_de_serie.html
descomposicion/uploads/: Data_Pan_Chavata_Exp_Holt_Winter.txt
static/js/: analisis_comparativo.js  visualization.js
templates/: analisis_comparativo.html  decomposition.html  modelo_de_serie.html  visualization.html
uploads/: data_tarea_semana_6.txt  datas.csv  test_data.csv
